<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Studify</string>
    <string name="app_title">Studify Students</string>
    <string name="app_subtitle">Student Information</string>

    <string name="hint_name">Student Name</string>
    <string name="hint_student_id">Student ID</string>
    <string name="hint_course">Course</string>
    <string name="hint_year">Year Level</string>
    <string name="hint_hometown">Hometown</string>

    <string name="btn_generate">GENERATE PROFILE</string>
    <string name="btn_clear">CLEAR</string>

    <string name="error_required">Required</string>
    <string name="validation_message">Please complete all fields.</string>
    <string name="result_placeholder">Your generated profile will appear here.</string>
    <string name="cd_toggle_theme">Toggle dark mode</string>
</resources>